--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
   provider: ^6.1.5+1
-
+  uuid: ^4.5.1
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
