--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
   provider: ^6.1.5+1
+  flutter_launcher_icons: ^0.14.4
   uuid: ^4.5.1
   
   # The following adds the Cupertino Icons font to your application.
@@ -61,10 +62,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/icons
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+flutter_launcher_icons:
+  image_path: "assets/icons/LogoApp.png"
+  android: true
+  ios: false
 
+
+  adaptive_icon_background: "#FFFFFF" 
+  adaptive_icon_foreground: "assets/icons/LogoApp.png"
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
