--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
             -keypass $KEY_PSW \
             -storepass $STORE_PSW \
             -keyalg RSA -keysize 2048 -validity 10000 
+            -dname "CN=Eliot, OU=Personal, O=TaskPlanner, L=Local, ST=NA, C=FR"
             
           # 2. Encode the key to Base64 and print it
           echo "--- START KEY BASE64 ---"
