--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,41 +35,10 @@ jobs:
           java-version: "17" # JDK 17 is standard for recent Flutter/Android
           distribution: "temurin"
 
-      - name: TEMP Generate and Print Base64 Signing Key
+      - name: Decode Keystore for Release
         if: startsWith(github.ref, 'refs/tags/v')
-        id: generate_key
         run: |
-          KEY_FILE="android/app/app_release.jks"
-          KEY_ALIAS="release_key"
-          STORE_PSW="password"
-          KEY_PSW="password"
-
-          # 1. FIX: Use HEREDOC to force non-interactive key generation, 
-          # providing answers for the passwords and the final confirmation.
-          keytool -genkey -v \
-            -keystore $KEY_FILE \
-            -alias $KEY_ALIAS \
-            -keypass $KEY_PSW \
-            -storepass $STORE_PSW \
-            -keyalg RSA -keysize 2048 -validity 10000 \
-            -dname "CN=Eliot, OU=Personal, O=TaskPlanner, L=Local, ST=NA, C=FR" \
-            <<EOF
-            
-          EOF
-            
-          # 2. Encode the key to Base64 and print it.
-          if [ -f "$KEY_FILE" ]; then
-              echo "--- START KEY BASE64 ---"
-              base64 "$KEY_FILE" | tr -d '\n'
-              echo 
-              echo "--- END KEY BASE64 ---"
-          else
-              echo "FATAL ERROR: Keystore file was not created."
-              exit 1
-          fi
-
-          # Force fail after printing the key to prevent running the next build step
-          exit 1
+          echo "${{ secrets.SIGNING_KEY_BASE64 }}" | base64 --decode > android/app/app_release.jks
         shell: bash
 
       # 4. Flutter doctor (Optional, for verification)
@@ -83,6 +52,11 @@ jobs:
       # 6. Build release APK (Your original step 6)
       - name: Build APK
         run: flutter build apk --release
+        env:
+          RELEASE_KEY_ALIAS: release_key
+          RELEASE_KEY_PASSWORD: password
+          RELEASE_STORE_FILE: android/app/app_release.jks
+          RELEASE_STORE_PASSWORD: password
 
       # 7. Upload artifact (Your original step 7)
       - name: Upload APK artifact
