--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   flutter_localizations:
     sdk: flutter
-
+  fl_chart: ^0.68.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
